Added options to disable weight and activation regularization in config files. Also improved print outs

--- a/develop/experiment_configs/config_LeNet_test.yaml
+++ b/develop/experiment_configs/config_LeNet_test.yaml
@@ -15,6 +15,9 @@ lrMomentum: 0.5
 lrMPAdjustmentWarmUpEpochs: 5
 
 # Loss contribution
+enableLossActivation: False
+enableLossWeightL1: False
+enableLossWeightL2: False
 lossActivationLambda: 0.002
 lossWeightL1Lambda: 0.002
 lossWeightL2Lambda: 0.002
