Fixed bugs. Previouslly the sparsity losses didn't propagate gradient back. Also added activation sparsity loss print out

--- a/develop/experiment_configs/config_LeNet_test.yaml
+++ b/develop/experiment_configs/config_LeNet_test.yaml
@@ -15,12 +15,12 @@ lrMomentum: 0.5
 lrMPAdjustmentWarmUpEpochs: 5
 
 # Loss contribution
-enableLossActivation: False
-enableLossWeightL1: False
-enableLossWeightL2: False
-lossActivationLambda: 0.002
-lossWeightL1Lambda: 0.002
-lossWeightL2Lambda: 0.002
+enableLossActivation: True
+enableLossWeightL1: True
+enableLossWeightL2: True
+lossActivationLambda: 0.00002
+lossWeightL1Lambda: 0.00002
+lossWeightL2Lambda: 0.00002
 
 # Pruning paramters
 prune: False
