--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 horovod==0.19.*
 tensorboard==2.2.2
+easydict==1.9
 # make sure horovod is re-compiled if environment is re-built
 --no-binary=horovod
