--- a/develop/experiment_configs/config_imagenet_resnet50_pretrained_iter_BPc2r4_quantize.yaml
+++ b/develop/experiment_configs/config_imagenet_resnet50_pretrained_iter_BPc2r4_quantize.yaml
@@ -3,10 +3,10 @@
 #See Section 4.2 of Deep Residual Learning for Image Classification for settings
 
 # Iterations, etc
-numEpochToTrain: 4
+numEpochToTrain: 10
 batchSizePerWorker: 32
 numThreadsPerWorker: 28
-numPhaseToTrain: 3
+numPhaseToTrain: 1
 # Learning rates
 
 #From the Accurate, Large minibatch SGD
@@ -18,7 +18,7 @@ numPhaseToTrain: 3
 lrInitialBase: 0.0001
 lrPeakBase: 0.0001
 lrWarmupEpochs: 1
-lrStepSize: 2
+lrStepSize: 5
 lrReductionFactor: 0.1
 lrMomentum: 0.9
 lrMPAdjustmentWarmUpEpochs: 1
@@ -32,14 +32,14 @@ lossWeightL1Lambda: 0.00002
 lossWeightL2Lambda: 0.0001
 
 # Pruning and quantization parameters
-prune: True
+prune: False
 pruneCluster: 2
 pruneRangeInCluster: 4
 sparsityIncrement: 0.25
 pruneThreshold: 0.005
-quantize: False
-numUpdateBNStatsEpochs: 100
-numUpdateQatObserverEpochs: 100
+quantize: True
+numUpdateBNStatsEpochs: 2
+numUpdateQatObserverEpochs: 3
 
 # See
 seed: 47
@@ -49,8 +49,8 @@ dataTrainDir: '/homes/jmusel/jmuse/imagenet/train'
 dataValDir: '/homes/jmusel/jmuse/imagenet/val'
 
 # Checkpoints
-checkpointSaveDir: 'experiment_logs/imagenet_resnet50_pretrained_iter_BPc2r4_log'
+checkpointSaveDir: 'experiment_logs/imagenet_resnet50_pretrained_iter_BPc2r4_quantize_log'
 checkpointSaveFileNameFormat: 'ckpt_epoch{}.pth.tar'
 
 # Log Dir
-logDir: 'experiment_logs/imagenet_resnet50_pretrained_iter_BPc2r4_log'
+logDir: 'experiment_logs/imagenet_resnet50_pretrained_iter_BPc2r4_quantize_log'
