--- a/conda_environment.yml
+++ b/conda_environment.yml
@@ -17,7 +17,7 @@ dependencies:
   - pip:
       - -r file:requirements.txt
   - python=3.7
-  - pytorch=1.5
+  - pytorch==1.5.0
   - tensorboard=2.1
   - torchvision=0.6
   - pip:
