--- a/develop/vgg16_sweep/config_imagenet_vgg16_pretrained_iter_BPc1r4_p75_quantize.yaml
+++ b/develop/vgg16_sweep/config_imagenet_vgg16_pretrained_iter_BPc1r4_p75_quantize.yaml
@@ -3,16 +3,16 @@
 #See Section 4.2 of Deep Residual Learning for Image Classification for settings
 
 # Iterations, etc
-numEpochToTrain: 10
+numEpochToTrain: 6
 batchSizePerWorker: 32
-numThreadsPerWorker: 28
+numThreadsPerWorker: 8
 numPhaseToTrain: 1
-# Learning rates
+# Learning rates1
 
 lrInitialBase: 0.0001
 lrPeakBase: 0.0001
 lrWarmupEpochs: 1
-lrStepSize: 5
+lrStepSize: 4
 lrReductionFactor: 0.1
 lrMomentum: 0.9
 lrMPAdjustmentWarmUpEpochs: 1
@@ -32,8 +32,8 @@ pruneRangeInCluster: 4
 sparsityIncrement: 0.25
 pruneThreshold: 0.005
 quantize: True
-numUpdateBNStatsEpochs: 2
-numUpdateQatObserverEpochs: 3
+numUpdateBNStatsEpochs: 100
+numUpdateQatObserverEpochs: 100
 
 # See
 seed: 47
@@ -43,8 +43,8 @@ dataTrainDir: '/home/james/imagenet/train'
 dataValDir: '/home/james/imagenet/val'
 
 # Checkpoints
-checkpointSaveDir: '/home/james/resnet50_logs/imagenet_resnet50_pretrained_iter_BPc1r4_quantize_log'
+checkpointSaveDir: '/home/james/vgg16_logs/imagenet_vgg16_pretrained_iter_BPc1r4_p75_quantize'
 checkpointSaveFileNameFormat: 'ckpt_epoch{}.pth.tar'
 
 # Log Dir
-logDir: '/home/james/resnet50_logs/imagenet_resnet50_pretrained_iter_BPc1r4_quantize_log'
+logDir: '/home/james/vgg16_logs/imagenet_vgg16_pretrained_iter_BPc1r4_p75_quantize'
