Added VGG16 BPC2R4 P75 quantization.

--- a/develop/vgg16_sweep/config_imagenet_vgg16_pretrained_iter_BPc2r4_p75_quantize.yaml
+++ b/develop/vgg16_sweep/config_imagenet_vgg16_pretrained_iter_BPc2r4_p75_quantize.yaml
@@ -3,16 +3,16 @@
 #See Section 4.2 of Deep Residual Learning for Image Classification for settings
 
 # Iterations, etc
-numEpochToTrain: 3
+numEpochToTrain: 6
 batchSizePerWorker: 32
 numThreadsPerWorker: 8
-numPhaseToTrain: 3
+numPhaseToTrain: 1
 # Learning rates1
 
 lrInitialBase: 0.0001
 lrPeakBase: 0.0001
 lrWarmupEpochs: 1
-lrStepSize: 2
+lrStepSize: 4
 lrReductionFactor: 0.1
 lrMomentum: 0.9
 lrMPAdjustmentWarmUpEpochs: 1
@@ -26,14 +26,14 @@ lossWeightL1Lambda: 0.00002
 lossWeightL2Lambda: 0.0001
 
 # Pruning and quantization parameters
-prune: True
+prune: False
 pruneCluster: 2
 pruneRangeInCluster: 4
 sparsityIncrement: 0.25
 pruneThreshold: 0.005
-quantize: False
-numUpdateBNStatsEpochs: 100
-numUpdateQatObserverEpochs: 100
+quantize: True
+numUpdateBNStatsEpochs: 1
+numUpdateQatObserverEpochs: 2
 
 # See
 seed: 47
@@ -43,8 +43,8 @@ dataTrainDir: '/home/james/imagenet/train'
 dataValDir: '/home/james/imagenet/val'
 
 # Checkpoints
-checkpointSaveDir: '/home/james/vgg16_logs/imagenet_vgg16_pretrained_iter_BPc2r4_p75'
+checkpointSaveDir: '/home/james/vgg16_logs/imagenet_vgg16_pretrained_iter_BPc2r4_p75_quantize'
 checkpointSaveFileNameFormat: 'ckpt_epoch{}.pth.tar'
 
 # Log Dir
-logDir: '/home/james/vgg16_logs/imagenet_vgg16_pretrained_iter_BPc2r4_p75'
+logDir: '/home/james/vgg16_logs/imagenet_vgg16_pretrained_iter_BPc2r4_p75_quantize'
