Tweeked the experiment software environment to be compatiable with vLab.

--- a/conda_environment.yml
+++ b/conda_environment.yml
@@ -5,19 +5,21 @@ channels:
 dependencies:
   - bokeh=1.4
   - cmake=3.16 # insures that Gloo library extensions will be built
-  - cudnn=7.6
+   #- cudnn=7.6
   - cupti=10.1
-  - cxx-compiler=1.0 # insures C and C++ compilers are available
-  - mpi4py=3.0 # installs cuda-aware openmpi
-  - nccl=2.5
-  - nvcc_linux-64=10.1 # configures environment to be "cuda-aware"
+  # - cxx-compiler=1.0 # insures C and C++ compilers are available
+  # - mpi4py=3.0 # installs cuda-aware openmpi
+  # - nccl=2.5
+  # - nvcc_linux-64=10.1 # configures environment to be "cuda-aware"
   - pip=20.0
   - pip:
       - -r file:requirements.txt
+  - cpuonly # Comment this if using a platform with GPU
   - python=3.7
-  - pytorch==1.5.0
+  # - pytorch==1.5.0
+  - pytorch==1.6.0
   - tensorboard=2.1
-  - torchvision=0.6
+  - torchvision=0.7.0
   - pip:
     - -r file:requirements.txt
 
