Updated training configurations.

--- a/develop/vgg16_sweep/config_imagenet_vgg16_pretrained_iter_BPc2r4_p50_quantize.yaml
+++ b/develop/vgg16_sweep/config_imagenet_vgg16_pretrained_iter_BPc2r4_p50_quantize.yaml
@@ -1,19 +1,13 @@
 # YAML file parsers treats scientific notaiton as strings
-#Configuration for training baseline ResNet-56 on CIFAR 10
+#Configuration for pruning ResNet-50 on ImageNet
 #See Section 4.2 of Deep Residual Learning for Image Classification for settings
 
 # Iterations, etc
 numEpochToTrain: 6
 batchSizePerWorker: 32
-numThreadsPerWorker: 28
+numThreadsPerWorker: 8
 numPhaseToTrain: 1
-# Learning rates
-
-#From the Accurate, Large minibatch SGD
-#'We start from a learning rate of eta, and increment it by a constant amount at each iteration
-#such that it reaches eta_hat = k * eta after 5 epochs' (2.2, Gradual warmup)
-#'eta = 0.1 * k * n / 256', where n is 32, and n is 8 (5.1)
-#
+# Learning rates1
 
 lrInitialBase: 0.0001
 lrPeakBase: 0.0001
@@ -49,8 +43,8 @@ dataTrainDir: '/homes/jmusel/jmuse/imagenet/train'
 dataValDir: '/homes/jmusel/jmuse/imagenet/val'
 
 # Checkpoints
-checkpointSaveDir: '/homes/jmusel/jmuse/resnet50_sweep/imagenet_resnet50_pretrained_iter_BPc2r4_L1_p75_quantize_log'
+checkpointSaveDir: '/homes/jmusel/jmuse/vgg16_logs/imagenet_vgg16_pretrained_iter_BPc2r4_p50_quantize'
 checkpointSaveFileNameFormat: 'ckpt_epoch{}.pth.tar'
 
 # Log Dir
-logDir: '/homes/jmusel/jmuse/resnet50_sweep/imagenet_resnet50_pretrained_iter_BPc2r4_L1_p75_quantize_log'
+logDir: '/homes/jmusel/jmuse/vgg16_logs/imagenet_vgg16_pretrained_iter_BPc2r4_p50_quantize'
